# sqlalchemy_pydantic

./: .gitignore  conftest.py  main.py  one_class.py  pyproject.toml  test_main.py  test_one_class.py
