[tool.poetry]
name = "sqlalchemy-pydantic"
version = "0.1.0"
description = ""
authors = ["Rodrigo Delfino de Carvalho <rodrigoddc1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = {extras = ["pydantic"], version = "^2.0.10"}
pydantic = "^1.10.7"
pytest = "^7.3.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
